namespace HomeTrack.Domain.Enum
{
    public enum Role
    {
        Basic,
        Premium,
        Admin
    }
}